<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#fafafa"
    tools:context=".views.PersonalAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/personal_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_account_title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="36sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/balance_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@id/personal_account_title"
            android:layout_marginTop="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp" >

                <androidx.cardview.widget.CardView
                    android:id="@+id/coin_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="22dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/your_balance_title"
                    app:layout_constraintBottom_toBottomOf="@id/personal_account_id">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:padding="8dp"
                        android:background="#eee"
                        android:src="@drawable/ic_baseline_currency_ruble_24" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/your_balance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/coin_icon"
                    android:text="@string/balance_title_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_marginStart="12dp" />

                <TextView
                    android:id="@+id/personal_account_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/your_balance_title"
                    app:layout_constraintStart_toEndOf="@id/coin_icon"
                    android:layout_marginStart="12dp"
                    android:text="@string/loading_text"
                    android:textColor="@color/light_gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/your_balance_title"
                    app:layout_constraintBottom_toBottomOf="@id/personal_account_id"
                    android:textSize="18sp"
                    android:text="@string/loading_text"
                    android:textColor="#88b" />

                <TextView
                    android:id="@+id/next_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/coin_icon"
                    android:textSize="14sp"
                    android:text="@string/loading_text"
                    android:textColor="@color/light_gray"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#00a550" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tariff_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balance_card"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/tariff_title_text"
            android:layout_marginTop="26dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/tariff_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            app:layout_constraintTop_toBottomOf="@id/tariff_title"
            android:layout_marginTop="12dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tariff_recycler_view"
                android:layout_width="match_parent"
                tools:layout_height="240dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:listitem="@layout/item_tariff"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_title_text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tariff_card"
            android:layout_marginTop="24dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f5f5f5"
            app:layout_constraintTop_toBottomOf="@id/user_title"
            android:layout_marginTop="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/user_icon"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_baseline_account_circle_24"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/user_icon"
                    app:layout_constraintTop_toTopOf="@id/user_icon"
                    app:layout_constraintBottom_toBottomOf="@id/user_icon"
                    android:textColor="@color/light_gray"
                    android:text="@string/loading_text"
                    android:textSize="18sp"
                    android:layout_marginStart="12dp" />

                <ImageView
                    android:id="@+id/home_icon"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_icon"
                    android:src="@drawable/ic_round_home_24" />

                <TextView
                    android:id="@+id/user_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/user_icon"
                    app:layout_constraintTop_toTopOf="@id/home_icon"
                    app:layout_constraintBottom_toBottomOf="@id/home_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/light_gray"
                    android:text="@string/loading_text"
                    android:textSize="18sp"
                    android:layout_marginStart="12dp" />

                <ImageView
                    android:id="@+id/additional_service_icon"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_icon"
                    android:src="@drawable/ic_baseline_widgets_24" />

                <TextView
                    android:id="@+id/additional_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/user_icon"
                    app:layout_constraintTop_toTopOf="@id/additional_service_icon"
                    app:layout_constraintBottom_toBottomOf="@id/additional_service_icon"
                    android:text="@string/additional_services_text"
                    android:textColor="@color/light_gray"
                    android:textSize="18sp"
                    android:layout_marginStart="12dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>